# uroman-rs

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  deny.toml
.github/workflows/: rust.yml
examples/: basic.rs  process_file.rs  sample.txt
src/: decompositions.rs  edge.rs  lattice.rs  lib.rs  main.rs  rom_rule.rs  utils.rs
tests/: test.rs  unit_tests.rs
