[package]
name = "uroman-rs"
authors = ["fulm-o <fulmlumo@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
build = "build.rs"
keywords = ["uroman", "romanization", "unicode", "nlp", "cli"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
assert_cmd = "2.0.17"
predicates = "3.1.3"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
unicode_names2 = "2.0.0"
unicode-properties = "0.1.3"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.12.0"
num-rational = { version = "0.4.2", features = ["serde"]}
ordered-float = "5.0.0"
phf = { version = "0.12.1", features = ["macros"] }
indexmap = "2.10.0"
thiserror = "2.0.12"

[[test]]
name = "unit_test"
path = "tests/unit_tests.rs"
harness = true
